Pass along resize events to the embedded widget, and also set the correct size for the widget before using XReparentWindow on it.

Thanks for all the feedback and testing of the patch!

BUG: 66492


svn path=/trunk/KDE/kdebase/workspace/; revision=948339