kscreensaver/libkscreensaver/kscreensaver.cpp
@@ -33,7 +33,7 @@
 
 //-----------------------------------------------------------------------------
 
-KScreenSaver::KScreenSaver( WId id ) : QWidget()
+KScreenSaver::KScreenSaver( WId id ) : QWidget(), embeddedWidget(0)
 {
     if ( id )
     {
@@ -51,16 +51,20 @@ bool KScreenSaver::event(QEvent* e)
     bool r = QWidget::event(e);
     if (e->type() == QEvent::Polish)
         setAttribute(Qt::WA_StyledBackground, false);
+    if ((e->type() == QEvent::Resize) && embeddedWidget)
+        embeddedWidget->resize( size() );
     return r;
 }
 
 void KScreenSaver::embed( QWidget *w )
 {
+    w->resize( size() );
     QApplication::sendPostedEvents();
 #ifdef Q_WS_X11 //FIXME
     XReparentWindow(QX11Info::display(), w->winId(), winId(), 0, 0);
 #endif
     w->setGeometry( 0, 0, width(), height() );
+    embeddedWidget = w;
     QApplication::sendPostedEvents();
 }
 
